--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -8,10 +8,17 @@
   font-weight: normal;
 }
 
+:root {
+  --el-color-primary: #FE634E !important;
+  --el-header-padding: 0 0 !important;
+}
+
+html,body,#app {
+  width: 100%;
+}
+
 body {
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
   transition:
     color 0.5s,
     background-color 0.5s;
